# Positiebepalingssysteem

./: .gitignore  CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  LICENSE  Makefile  Positiebepalingssysteem.vpp  README.md  helpers.h  log.h  options.h  position.cpp  position_from_camera.cpp
docs/: .gitignore
docs/plantuml sources/: components.plantuml  sequence_blob.plantuml
experiments/: Makefile  view.cpp
experiments/camera-stdin-stdout/: .gitignore  BgSubtract.cpp  ImageReader.cpp  ImageReader.h  ImageReader.py  ImageReaderEncode.cpp  ImageReaderEncode.h  Log.h  Makefile  bg-subtract.py  bgsubtract-video.sh  blobdetect.cpp  blur.cpp  dilate.cpp  edit-run.sh  erode-subtract.sh  erode.cpp  ffmpeg-camera1.sh  ffmpeg.sh  high-res.sh  low-res-ffmpeg.sh  multiple.sh  output.mkv  print_image.cpp  processor.cpp  python-read.py  read-edit.cpp  read-video-stdin.cpp  run-python-bg.sh  run-python.sh  run.sh  subtract.sh  threshold.cpp  video-display.py  video-ffmpeg-encode.sh  video-ffmpeg.sh  video-input.sh  view-video-ffmpeg.sh
experiments/camera-stdin-stdout/combined/: Makefile  combined.cpp  show.cpp
experiments/combined/: Makefile  combined.cpp
experiments/lib/: ImageReader.cpp  ImageReader.h  ImageReaderStatus.h  Log.cpp  print_image.h
plotter/: CMakeLists.txt  Makefile  plotter.cpp
position/: CMakeLists.txt  Makefile
stdin-stdout/: CMakeLists.txt  run.sh  view.cpp
stdin-stdout/lib/: CMakeLists.txt  ImageReaderStatus.h  Log.h  print_image.cpp
